feat: update gradle configuration